--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 cplex==22.1.2.0
-docplex==2.29.241
+docplex
 graphviz==0.20.3
-gurobipy==12.0.0
+gurobipy
 lxml==5.1.0
 matplotlib==3.8.4
 numpy==2.2.3
